# min-cpu-forth

./: .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  bandit.yaml  minimal-cpu-forth.tgz  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/workflows/: check.yml  pytest.yml  security.yml
docs/: 01-first-steps.md  02-cpu-design.md  03-assembler-plan.md
docs/design/: instruction-set.md  minimal-itc-forth-primitives-1.md  minimal-itc-forth-primitives-2.md  minimal-itc-forth-primitives-3.md  minimal-itc-forth-primitives-4.md  minimal-itc-forth-primitives-5.md  minimal-itc-forth-primitives-6.md  prompt-1.md  response-1.md
docs/prototypes/: assembler-interpreter-1.py  assembler-interpreter-2.py  assembler-interpreter-3.py  assembler-interpreter-4.py
src/min_cpu_forth/: __init__.py  containers.py  cpu.py  emulator.py  errors.py  forth.py  layout.py  ports.py
src/min_cpu_forth/adapters/: __init__.py  counted_string.py  dictionary.py  io.py  memory.py  registers.py  source.py  stack.py  system_variables.py
src/min_cpu_forth/domain/: __init__.py  dtos.py  opcode.py  register.py  types.py
src/min_cpu_forth/services/: __init__.py  emulator.py  forth.py
src/min_cpu_forth/services/assembler/: __init__.py  emitter.py  parser.py  resolver.py  service.py  specs.py
src/min_cpu_forth/services/kernel/: __init__.py  builder.py  routines.py
tests/: conftest.py
tests/acceptance/features/: itc_kernel.feature  square.feature
tests/acceptance/steps/: test_itc_kernel_steps.py  test_square_steps.py
tests/e2e/: test_example_e2e.py
tests/integration/: test_assembler_emulator_integration.py  test_example_integration.py  test_interpreter_core_integration.py  test_kernel_integration.py
tests/unit/: test_adapters.py  test_assembler.py  test_containers.py  test_cpu.py  test_dictionary.py  test_domain.py  test_emulator.py  test_forth.py  test_io_words.py  test_kernel.py  test_layout.py  test_primitives.py
