[project]
name = "min-cpu-forth"
version = "0.1.0"
description = "A minimal virtual CPU instruction set and inner interpreter for an Indirect Threaded Code (ITC) Forth."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.49.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/min_cpu_forth"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-xdist",
    "pytest-bdd",
    "pytest-playwright",
    "factory-boy",
    "faker",
    "ruff",
    "pyright",
    "pyrefly",
    "bandit[toml]",
    "pip-audit",
    "pre-commit",
    "import-linter>=2.13",
]

# Tool configuration lives in dedicated files, matching the rest of this project
# (ruff.toml, pyrightconfig.json, pyrefly.toml, bandit.yaml):
#   - pytest       -> pytest.ini
#   - import-linter -> .importlinter
